--- a/Advanta/index.html
+++ b/Advanta/index.html
@@ -255,7 +255,7 @@
           <div class="title">
             <h2>Observation Parameters</h2>
             <div class="actions">
-              <button onclick="openPopup('.params')"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M12 8V16M16 12H8M6 20H18C19.1046 20 20 19.1046 20 18V6C20 4.89543 19.1046 4 18 4H6C4.89543 4 4 4.89543 4 6V18C4 19.1046 4.89543 20 6 20Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg></button>
+              <button onclick="openPopup('.params');controlParamTypeSelect();"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M12 8V16M16 12H8M6 20H18C19.1046 20 20 19.1046 20 18V6C20 4.89543 19.1046 4 18 4H6C4.89543 4 4 4.89543 4 6V18C4 19.1046 4.89543 20 6 20Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg></button>
             </div>
           </div>
           <div class="content">
