--- a/Advanta/index.html
+++ b/Advanta/index.html
@@ -418,7 +418,7 @@
                 <select name="paramType" id="paramType">
                   <option value="text">Text</option>
                   <option value="number">Number</option>
-                  <option value="range">Range</option>
+                  <option value="range" selected>Range</option>
                   <option value="radio">Radio</option>
                   <option value="checkbox">Checkbox</option>
                   <option value="date">Date</option>
@@ -431,14 +431,12 @@
                       <div class="tr">
                         <div class="td">0</div>
                         <div class="td">Description 1</div>
-                      </div>
-                      <div class="tr">
-                        <div class="td">5</div>
-                        <div class="td">Description 2</div>
-                      </div>
-                      <div class="tr">
-                        <div class="td">10</div>
-                        <div class="td">Description 3</div>
+                        <div class="td action">
+                          <button id="edit" onclick="editParamTypeValue(this)"> 
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <g id="style=paramar"> <g id="edit"> <path id="vector" d="M18.4101 3.6512L20.5315 5.77252C21.4101 6.6512 21.4101 8.07582 20.5315 8.9545L9.54019 19.9458C9.17774 20.3082 8.70239 20.536 8.19281 20.5915L4.57509 20.9856C3.78097 21.072 3.11061 20.4017 3.1971 19.6076L3.59111 15.9898C3.64661 15.4803 3.87444 15.0049 4.23689 14.6425L3.70656 14.1121L4.23689 14.6425L15.2282 3.6512C16.1068 2.77252 17.5315 2.77252 18.4101 3.6512Z" stroke-width="2"/> <path id="vector_2" d="M15.2282 3.6512C16.1068 2.77252 17.5315 2.77252 18.4101 3.6512L20.5315 5.77252C21.4101 6.6512 21.4101 8.07582 20.5315 8.9545L18.7283 10.7576L13.425 5.45432L15.2282 3.6512Z" stroke-width="2"/> </g> </g> </svg> 
+                          </button>
+                          <button id="delete" onclick="deleteParamTypeValue('${param.id}')"> <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M18 6L17.1991 18.0129C17.129 19.065 17.0939 19.5911 16.8667 19.99C16.6666 20.3412 16.3648 20.6235 16.0011 20.7998C15.588 21 15.0607 21 14.0062 21H9.99377C8.93927 21 8.41202 21 7.99889 20.7998C7.63517 20.6235 7.33339 20.3412 7.13332 19.99C6.90607 19.5911 6.871 19.065 6.80086 18.0129L6 6M4 6H20M16 6L15.7294 5.18807C15.4671 4.40125 15.3359 4.00784 15.0927 3.71698C14.8779 3.46013 14.6021 3.26132 14.2905 3.13878C13.9376 3 13.523 3 12.6936 3H11.3064C10.477 3 10.0624 3 9.70951 3.13878C9.39792 3.26132 9.12208 3.46013 8.90729 3.71698C8.66405 4.00784 8.53292 4.40125 8.27064 5.18807L8 6" stroke-width="2" stroke-paramcap="round" stroke-paramjoin="round"/> </svg> </button>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -488,23 +486,23 @@
           </div>
         </div>
         <div class="pop-child">
-          <form id="paramTypeAddRange" data-value="range">
+          <form id="paramTypeAddRange" data-value="range" onsubmit="event.preventDefault(); addRange()">
             <label for="inputRange">Type your next range</label>
             <input type="number" id="inputRange" placeholder="Number" required>
             <input type="text" id="inputRangeDesc" placeholder="Description">
-            <button type="button" onclick="addRange()">Add</button>
+            <button type="button">Add</button>
           </form>
-          <form id="paramTypeAddRadio" data-value="radio">
+          <form id="paramTypeAddRadio" data-value="radio" onsubmit="event.preventDefault(); addRadio()">
             <label for="inputRadio">Type your next option</label>
             <input type="number" id="inputRadio" placeholder="Number" required>
             <input type="text" id="inputRadioDesc" placeholder="Description">
-            <button type="button" onclick="addRadio()">Add</button>
+            <button type="button">Add</button>
           </form>
-          <form id="paramTypeAddCheckbox" data-value="checkbox">
+          <form id="paramTypeAddCheckbox" data-value="checkbox" onsubmit="event.preventDefault(); addCheckbox()">
             <label for="inputCheckbox">Type your next option</label>
             <input type="number" id="inputCheckbox" placeholder="Number" required>
             <input type="text" id="inputCheckboxDesc" placeholder="Description">
-            <button type="button" onclick="addCheckbox()">Add</button>
+            <button type="button">Add</button>
           </form>
         </div>
       </div>
