Advanta - Trial observation prep

--- a/Advanta/index.html
+++ b/Advanta/index.html
@@ -227,7 +227,11 @@
             <h2>Observation Parameters</h2>
           </div>
           <div class="content-container">
-            <div class="content-item">Loading data...</div>
+            <div class="content-item">
+              <label for="Seed_Vigour (SDV)"><input type="checkbox" name="observationParams" value="Seed Vigour (SDV)" id="Seed_Vigour (SDV)"><span>Seed Vigour (SDV)</span></label>
+              <label for="Plant_Germination"><input type="checkbox" name="observationParams" value="Plant Germination" id="Plant_Germination"><span>Plant Germination</span></label>
+              <label for="ERSC"><input type="checkbox" name="observationParams" value="ERSC" id="ERSC"><span>ERSC</span></label>
+            </div>
           </div>
         </div>
 
