--- a/Advanta/index.html
+++ b/Advanta/index.html
@@ -56,7 +56,7 @@
 
       <nav>
         <div class="item">
-          <div class="item-main" data-toggle="dashboard">
+          <div class="item-main active" data-toggle="dashboard">
             <div class="icon">
               <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M13 12C13 11.4477 13.4477 11 14 11H19C19.5523 11 20 11.4477 20 12V19C20 19.5523 19.5523 20 19 20H14C13.4477 20 13 19.5523 13 19V12Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round"/> <path d="M4 5C4 4.44772 4.44772 4 5 4H9C9.55228 4 10 4.44772 10 5V12C10 12.5523 9.55228 13 9 13H5C4.44772 13 4 12.5523 4 12V5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round"/> <path d="M4 17C4 16.4477 4.44772 16 5 16H9C9.55228 16 10 16.4477 10 17V19C10 19.5523 9.55228 20 9 20H5C4.44772 20 4 19.5523 4 19V17Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round"/> <path d="M13 5C13 4.44772 13.4477 4 14 4H19C19.5523 4 20 4.44772 20 5V7C20 7.55228 19.5523 8 19 8H14C13.4477 8 13 7.55228 13 7V5Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round"/> </svg>
             </div>
@@ -70,12 +70,12 @@
             </div>
             <div class="text">
               <p>Input Data</p>
-              <span class="running">Parent Test Corn Dry Season</span>
+              <!-- <span class="running">Parent Test Corn Dry Season</span> -->
             </div>
           </div>
         </div>
         <div class="item">
-          <div class="item-main active" data-toggle="add-trial">
+          <div class="item-main" data-toggle="add-trial">
             <div class="icon">
               <svg viewBox="0 0 1024 1024" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M978.578286 900.461714l-108.617143-108.617143c30.134857-39.570286 48.274286-88.795429 48.274286-142.189714a235.739429 235.739429 0 0 0-235.52-235.373714 235.739429 235.739429 0 0 0-235.373715 235.373714 235.739429 235.739429 0 0 0 235.446857 235.52c53.467429 0 102.692571-18.139429 142.189715-48.274286l108.617143 108.544a31.524571 31.524571 0 0 0 44.836571 0 31.744 31.744 0 0 0 0.146286-44.982857zM510.902857 649.654857a172.105143 172.105143 0 0 1 171.885714-171.885714 171.885714 171.885714 0 0 1 0 343.771428 172.178286 172.178286 0 0 1-171.885714-171.885714z m270.262857-378.514286c0 17.554286-14.262857 31.744-31.817143 31.744H431.396571a31.744 31.744 0 0 1 0-63.488h317.952c17.554286 0 31.817143 14.189714 31.817143 31.744z m-609.426285 620.032h211.968a31.890286 31.890286 0 0 1 0 63.634286H171.739429c-58.368 0-106.057143-47.542857-106.057143-106.057143V283.062857c0-14.262857 5.12-28.086857 14.262857-39.058286L240.420571 53.101714a57.417143 57.417143 0 0 1 43.885715-20.48h517.997714c58.441143 0 106.057143 47.542857 106.057143 106.057143V366.445714a31.744 31.744 0 0 1-63.634286 0V138.605714a42.422857 42.422857 0 0 0-42.276571-42.349714H336.018286V280.137143a50.688 50.688 0 0 1-50.980572 50.176H129.389714v518.509714c0 23.332571 19.017143 42.349714 42.349715 42.349714zM272.457143 113.810286l-128.512 152.868571h128.512v-152.868571z m79.506286 476.16a31.744 31.744 0 0 0 0-63.634286H240.64a31.744 31.744 0 0 0 0 63.634286h111.323429z m0 146.066285a31.744 31.744 0 0 0 0-63.561142H240.64a31.744 31.744 0 0 0 0 63.561142h111.323429z m31.744-353.206857H240.64a31.744 31.744 0 0 0 0 63.561143h143.067429a31.744 31.744 0 0 0 0-63.561143z" fill="#000000" /></svg>
             </div>
@@ -110,7 +110,7 @@
 
     <main>
 
-      <div id="dashboard" class="item-container">
+      <div id="dashboard" class="item-container active">
 
         <div class="item">
           <div class="title">
@@ -134,44 +134,8 @@
               </div>
               <div class="tbody">
                 <div class="tr">
-                  <div class="td no"></div>
-                  <div class="td">Parent Test Corn Dry Season</div>
-                  <div class="td">April</div>
-                  <div class="td" data-progress-value="location-target"><span>2</span></div>
-                  <div class="td" data-progress-value="trials-planted"><span>15</span></div>
-                  <div class="td" data-progress-value="trials-harvested"><span>25</span></div>
-                  <div class="td">Harvested</div>
-                  <div class="td progress" data-progress-value="planting"><span>100</span></div>
-                  <div class="td progress" data-progress-value="harvested"><span>65</span></div>
-                  <div class="td remarks">All harvested and post harvest observation on progress</div>
-                  <div class="td action">
-                    <button id="info">
-                      <svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"> <title>info</title> <path d="M16.247 4.733c0 1.684 1.271 2.825 2.84 2.825s2.842-1.142 2.842-2.825c0-1.685-1.272-2.826-2.842-2.826-1.568 0-2.84 1.141-2.84 2.826zM10.096 14.375c0 0.334-0.061 1.163 0.008 1.662l2.479-2.983c0.513-0.562 1.106-0.955 1.409-0.849s0.47 0.463 0.371 0.795l-4.103 13.59c-0.473 1.588 0.421 3.148 2.599 3.504 3.189 0 5.084-2.158 6.948-4.955 0-0.334 0.111-1.213 0.044-1.713l-2.479 2.982c-0.514 0.562-1.151 0.955-1.455 0.85-0.28-0.098-0.444-0.41-0.389-0.721l4.132-13.653c0.344-1.734-0.59-3.312-2.564-3.514-2.076 0.001-5.136 2.209-7 5.005z"></path> </svg>
-                    </button>
-                    <button id="run">
-                      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <g id="Media / Play"> <path id="Vector" d="M5 17.3336V6.66698C5 5.78742 5 5.34715 5.18509 5.08691C5.34664 4.85977 5.59564 4.71064 5.87207 4.67499C6.18868 4.63415 6.57701 4.84126 7.35254 5.25487L17.3525 10.5882L17.3562 10.5898C18.2132 11.0469 18.642 11.2756 18.7826 11.5803C18.9053 11.8462 18.9053 12.1531 18.7826 12.4189C18.6418 12.7241 18.212 12.9537 17.3525 13.4121L7.35254 18.7454C6.57645 19.1593 6.1888 19.3657 5.87207 19.3248C5.59564 19.2891 5.34664 19.1401 5.18509 18.9129C5 18.6527 5 18.2132 5 17.3336Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </g> </svg>
-                    </button>
-                  </div>
-                </div>
-                <div class="tr">
-                  <div class="td no"></div>
-                  <div class="td">Parent Test Sweet Corn Dry Season</div>
-                  <div class="td">July - August</div>
-                  <div class="td" data-progress-value="location-target"><span>5</span></div>
-                  <div class="td" data-progress-value="trials-planted"><span>45</span></div>
-                  <div class="td" data-progress-value="trials-harvested"><span>17</span></div>
-                  <div class="td">Harvested - Seed Setting</div>
-                  <div class="td progress" data-progress-value="planting"><span>45</span></div>
-                  <div class="td progress" data-progress-value="harvested"><span>0</span></div>
-                  <div class="td remarks">Planned to be planted on Jember, Lumajang, and Malang</div>
-                  <div class="td action">
-                    <button id="info">
-                      <svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"> <title>info</title> <path d="M16.247 4.733c0 1.684 1.271 2.825 2.84 2.825s2.842-1.142 2.842-2.825c0-1.685-1.272-2.826-2.842-2.826-1.568 0-2.84 1.141-2.84 2.826zM10.096 14.375c0 0.334-0.061 1.163 0.008 1.662l2.479-2.983c0.513-0.562 1.106-0.955 1.409-0.849s0.47 0.463 0.371 0.795l-4.103 13.59c-0.473 1.588 0.421 3.148 2.599 3.504 3.189 0 5.084-2.158 6.948-4.955 0-0.334 0.111-1.213 0.044-1.713l-2.479 2.982c-0.514 0.562-1.151 0.955-1.455 0.85-0.28-0.098-0.444-0.41-0.389-0.721l4.132-13.653c0.344-1.734-0.59-3.312-2.564-3.514-2.076 0.001-5.136 2.209-7 5.005z"></path> </svg>
-                    </button>
-                    <button id="run">
-                      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <g id="Media / Play"> <path id="Vector" d="M5 17.3336V6.66698C5 5.78742 5 5.34715 5.18509 5.08691C5.34664 4.85977 5.59564 4.71064 5.87207 4.67499C6.18868 4.63415 6.57701 4.84126 7.35254 5.25487L17.3525 10.5882L17.3562 10.5898C18.2132 11.0469 18.642 11.2756 18.7826 11.5803C18.9053 11.8462 18.9053 12.1531 18.7826 12.4189C18.6418 12.7241 18.212 12.9537 17.3525 13.4121L7.35254 18.7454C6.57645 19.1593 6.1888 19.3657 5.87207 19.3248C5.59564 19.2891 5.34664 19.1401 5.18509 18.9129C5 18.6527 5 18.2132 5 17.3336Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </g> </svg>
-                    </button>
-                  </div>
+                  <div class="td"></div>
+                  <div class="td">Loading...</div>
                 </div>
               </div>
               <div class="thead">
@@ -192,7 +156,7 @@
 
       </div>
 
-      <div id="add-trial" class="item-container active">
+      <div id="add-trial" class="item-container">
 
         <div class="new-trial item">
           
