Advanta - Running trial 3

--- a/Advanta/index.html
+++ b/Advanta/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="text">
               <p>Input Data</p>
-              <!-- <span class="running">Parent Test Corn Dry Season</span> -->
+              <span class="running"></span>
             </div>
           </div>
         </div>
