Advanta - Trial delete

--- a/Advanta/index.html
+++ b/Advanta/index.html
@@ -262,7 +262,7 @@
             </div>
 
             <div class="content-item actions" style="grid-column: span 2;">
-              <button type="submit">Save</button>
+              <button type="submit" class="btn">Save</button>
             </div>
 
             <!-- <div class="content-item">
