Advanta - Trial parameter preparation

--- a/Advanta/index.html
+++ b/Advanta/index.html
@@ -152,7 +152,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>>
 
       </div>
 
@@ -288,7 +288,8 @@
           </div>
         </div>
 
-        <div class="item"></div>
+        <div class="input-per-param">
+        </div>
 
       </div>
 
