--- a/Advanta-v2/index.html
+++ b/Advanta-v2/index.html
@@ -154,11 +154,11 @@
                 <label>Planting Window</label>
                 <div class="planting-window">
                   <div>
-                    <span>Start Date</span>
+                    <label class="small">Start Date</label>
                     <input type="month" id="input-date" required>
                   </div>
                   <div>
-                    <span>End Date</span>
+                    <label class="small">End Date</label>
                     <input type="month" id="input-ends" required>
                   </div>
                 </div>
